avformat/utils: Exclude the header size when computing duration from bit_rate

This improves the estimate for MP3s with cover art tags.

Fixes Ticket2931

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>